# Monsoon

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/client/include/: cui.hpp
src/client/sdk/inlcude/: api.hpp  net.hpp  tinn.hpp
src/cmd/: CMakeLists.txt  monsoon.cpp
src/cmd/include/: client.hpp  monsoon.hpp
src/cmd/monsoon/: client.hpp  monsoon.hpp
src/common/include/: channel.hpp
